# PreconditionedVLFS.jl

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md
compile/: build_sysimage.jl  trace_mpi_warmup.jl  trace_serial_warmup.jl
data/periodic2d/: solver_parameters_fluid.xml  solver_parameters_solid.xml
data/periodic3d/: solver_parameters_fluid.xml
data/wsi_2d/: solver_parameters_fluid.xml
data/wsi_3d/: solver_parameters_solid.xml
run/: build_sysimage.sh  buildcpp.sh  env.example.sh  scaling_2d_strong.sh  scaling_2d_weak.sh  scaling_3d_strong.sh  scaling_3d_weak.sh  toyrichardson.sh  warmup.sh  wsi2d.sh  wsi3d.sh
run_local/: build_sysimage.sh  env.example.sh  scaling_2d_strong.sh  scaling_2d_weak.sh  scaling_3d_strong.sh  scaling_3d_weak.sh  toyrichardson.sh  warmup.sh  wsi2d.sh  wsi3d.sh
run_slurm/: build_sysimage.sh  buildcpp.sh  env.example.sh  scaling_2d_strong.sh  scaling_2d_weak.sh  scaling_3d_strong.sh  scaling_3d_weak.sh  toyrichardson.sh  warmup.sh  wsi2d.sh  wsi3d.sh
scripts/: 2d_periodic_setup.jl  3d_periodic_setup.jl  intro.jl  mesh_wsi_2d_1.jl  mesh_wsi_2d_warmup.jl  mesh_wsi_3d_1.jl  mesh_wsi_3d_warmup.jl  toy_richardson_setup.jl  wsi_2d_setup.jl  wsi_3d_setup.jl
slrum_jobs/: example_job.sh
slurm_jobs/: example_job.sh
src/: Periodic2D.jl  Periodic3D.jl  PreconditionedVLFS.jl  ToyRichardson.jl  WSI2D.jl  WSI3D.jl  auxfunctions.jl  julia_headers.jl
src/cppcode/: configure.sh
src/cppcode/cppsrc/: CMakeLists.txt  headers_and_helpers.hpp  mpicpp.cpp
src/cppcode/shared_lib/: GridapTrilinos.jl
test/: periodic2d_test_strong.jl  periodic2d_test_weak.jl  periodic3d_test_strong.jl  periodic3d_test_weak.jl  runtests.jl  toyrichardsontest.jl  wsi2dtest.jl  wsi3dtest.jl
